appetizer and main course done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,46 @@
     </header>
 
     <main>
-        
+        <h1>Lé Finish Eat Out Menu </h1>
+        <section>
+            <h2>Appetizers</h2>
+            <ul>
+                <li>
+                    <strong>Hold on</strong>
+                    <p>Ingredients: Bread, Cheese, Ginger and Tuna</p>
+                    <img src="images/appet1.jpg" width="400px" height="400px" alt="Image of Appetizer 1">
+                </li> <br>
+                <li>
+                    <strong>Don't leave</strong>
+                    <p>Ingredients: Akara, Beef, Tomato, Plantain and Rum</p>
+                    <img src="images/appet2.jpg" width="400px" height="400px" alt="Image of Appetizer 2">
+                </li> <br>
+                <li>
+                    <strong>A min. more</strong>
+                    <p>Ingredients: Chip, Egg, Fish and Tequila</p>
+                    <img src="images/appet3.jpg" width="400px" height="400px" alt="Image of Appetizer 3">
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Main Course</h2>
+            <ul>
+                <li>
+                    <strong>Stomachache</strong>
+                    <p>Ingredients: Beans, Cheese, Fish, Rice and Sauce</p>
+                    <img src="images/main1.jpg" width="400px" height="400px" alt="Image of main course1">
+                </li> <br>
+                <li>
+                    <strong>Quench</strong>
+                    <p>Ingredients: Beef, Egg, Fish, Oxtail and Yam</p>
+                    <img src="images/main2.jpg" width="400px" height="400px" alt="Image of main course2">
+                </li> <br>
+                <li>
+                    <strong>It is finished</strong>
+                    <p>Ingredients: Afang, Chicken, Eba and Shaki</p>
+                    <img src="images/main3.jpg" width="400px" height="400px" alt="Image of main course3">
+                </li>
     </main>
     
 
