contact and comment done

--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,89 @@
     <link rel="shortcut icon" href="images/icon1.jpg" type="image/x-icon">
 </head>
 <body>
-    
+    <header id="top">
+        <!-- Header showing brief description of the restaurant and link to homepage-->
+        <h1>Lé Finish Eat Out</h1>
+        <p> <strong>A visit would keep you coming.</strong></p>
+        <p><a href="index.html">Back to Home</a></p>
+        <img src="images/main4.jpg" width="400px" height="400px" alt="image of food">
+    </header>
 
+    <main>
+        <!-- main content of the page -->
+        <section>
+            <!-- section for feedback -->
+            <h2>Select your favorites?</h2>
+            <p>Choose from the list below</p>
+            <form>
+                <label for="name">Name</label> <br>
+                <input type="text" placeholder="Enter your name"> <br> <br>
+                <select>
+                    <option>What's your favourite Apppetizer</option>
+                    <option>Hold on</option>
+                    <option>Don't leave</option>
+                    <option>A min. more</option>
+                </select> <br> <br>
+                <select>
+                    <option>What's your favourite Main course</option>
+                    <option>Stomachache</option>
+                    <option>Quench</option>
+                    <option>It is finished</option>
+                </select> <br> <br>
+                <select>
+                    <option>What's your favourite Dessert</option>
+                    <option>Have some fun</option>
+                    <option>I want more</option>
+                    <option>Is that all?</option>
+                </select> <br> <br>
+                <label for="comments">Comments</label> <br>
+                <textarea name="comments"></textarea> <br> <br>
+                <button type="submit">Submit</button>
+            </form>
+        </section>
+
+        <section>
+            <!-- section for reservation -->
+            <h2>Reservation</h2>
+            <p>Make a reservation</p>
+            <form>
+                <label for="name">Name</label> <br>
+                <input type="text" placeholder="Enter your name"> <br> <br>
+                <label for="date">Date</label> <br>
+                <input type="date" placeholder="Enter Date"> <br> <br>
+                <label for="time">Time</label> <br>
+                <input type="time" placeholder="Enter Time"> <br> <br>
+                <label for="people">Number of people</label> <br>
+                <input type="number" placeholder="Enter number of people"> <br> <br>
+                <select>
+                    <option>What's your prefered Apppetizer</option>
+                    <option>Hold on</option>
+                    <option>Don't leave</option>
+                    <option>A min. more</option>
+                </select> <br> <br>
+                <select>
+                    <option>What's your prefered Main course</option>
+                    <option>Stomachache</option>
+                    <option>Quench</option>
+                    <option>It is finished</option>
+                </select> <br> <br>
+                <select>
+                    <option>What's your prefered Dessert</option>
+                    <option>Have some fun</option>
+                    <option>I want more</option>
+                    <option>Is that all?</option>
+                </select> <br> <br>
+                <button type="submit">Submit</button>
+
+            </form>
+
+        </section>
+        
+    </main>
+
+    <!-- local link to the top of the page -->
+    <p><a href="#top">Back to top</a></p>
+    <!-- footer of the page -->
     <footer>
         <p>&copy; 2024 Lé Finish Eat Out. All rights reserved.</p>
     </footer>
