--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <link rel="shortcut icon" href="images/icon1.jpg" type="image/x-icon">
 </head>
 <body>
-    <header>
+    <header id="top">
+        <!-- Header showing brief description of the restaurant -->
         <h1>Lé Finish Eat Out</h1>
         <p> <strong>A visit would keep you coming.</strong></p>
     </header>
 
     <main>
-        <h1>Lé Finish Eat Out Menu </h1>
+        <!-- main content of the page -->
+        <h2>Lé Finish Eat Out Menu </h2>
         <section>
+            <!-- section for appetizers -->
             <h2>Appetizers</h2>
             <ul>
                 <li>
@@ -36,6 +39,7 @@
         </section>
 
         <section>
+            <!-- section for main course -->
             <h2>Main Course</h2>
             <ul>
                 <li>
@@ -53,11 +57,40 @@
                     <p>Ingredients: Afang, Chicken, Eba and Shaki</p>
                     <img src="images/main3.jpg" width="400px" height="400px" alt="Image of main course3">
                 </li>
+
+            </ul>
+        </section>
+
+        <section>
+            <!-- section for desserts -->
+            <h2>Desserts</h2>
+            <ul>
+                <li>
+                    <strong>Have some fun</strong>
+                    <p>Ingredients: Apple, Cheese, Ice cream and Tea</p>
+                    <img src="images/dess1.jpg" width="400px" height="400px" alt="Image of dessert1">
+                </li> <br>
+                <li>
+                    <strong>I want more</strong>
+                    <p>Ingredients: Cashew, Cheese, Grape and Whip cream</p>
+                    <img src="images/dess2.jpg" width="400px" height="400px" alt="Image of dessert2">
+                </li> <br>
+                <li>
+                    <strong>Is that all?</strong>
+                    <p>Ingredients: Chocolate, Cheese, Milk and Vanilla</p>
+                    <img src="images/dess3.jpg" width="400px" height="400px" alt="Image of dessert3">
+                </li>
+
+            </ul>
+        </section>
     </main>
     
-
+    <!--local links to the contact page and top of the page  -->
     <p><a href="contact.html">Want another visit? Contact Us Now!</a></p>
-    <footer>
+    <p><a href="#top">Back to the top</a></p>
+
+    <!-- footer of the page -->
+    <footer> 
         <p>&copy; 2024 Lé Finish Eat Out. All rights reserved.</p>
     </footer>
 </body>
